:recycle: refactor: Swagger for new arquiteture
