# docs/swagger.json
@@ -47,6 +47,113 @@
                         }
                     }
                 }
+            },
+            "post": {
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "description": "POST a new project. For the request to be met, the \"nome_projeto\", \"equipe_id\", \"descricao_projeto\" are required. The status already goes with a predefined value \"A Fazer\". the \"prazo_entrega\" is the number of days that the delivery time will be",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Projects"
+                ],
+                "summary": "POST a new Project",
+                "parameters": [
+                    {
+                        "description": "NewProject",
+                        "name": "NewProject",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/projetos.ReqProjeto"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/errorstratment.ResError"
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/errorstratment.ResError"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/projetos/status/{status}": {
+            "get": {
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "description": "GET all registered projects that have the status passed as a parameter",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Projects"
+                ],
+                "summary": "Get Status of Projects with a specific status with Param Status",
+                "parameters": [
+                    {
+                        "enum": [
+                            "A Fazer",
+                            "Em Andamento",
+                            "Em Teste",
+                            "Concluido"
+                        ],
+                        "type": "string",
+                        "description": "Status",
+                        "name": "status",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/projetos.ReqStatusProjeto"
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
             }
         },
         "/projetos/{id}": {
@@ -99,6 +206,185 @@
                         "description": "not authorized",
                         "schema": {
                             "type": "string"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "description": "PUT a specific project. For the request to be met, the \"nome_projeto\" and \"equipe_id\" and \"descricao_projeto\" are required",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Projects"
+                ],
+                "summary": "PUT Project with ID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Projeto ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Project",
+                        "name": "Project",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/projetos.ReqAtualizarProjetoData"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/errorstratment.ResError"
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/errorstratment.ResError"
+                            }
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "description": "DELETE a specific project. For the request to be met, the \"id_projeto\" are required",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Projects"
+                ],
+                "summary": "Delete a specific Project",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Projeto ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/errorstratment.ResOk"
+                        }
+                    },
+                    "401": {
+                        "description": "Not Authorized",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/errorstratment.ResError"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/projetos/{id}/status": {
+            "put": {
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "description": "PUT Status of a specific project. For the request to be met, the \"status\" are required",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Projects"
+                ],
+                "summary": "PUT Status of a Project",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Status-Project",
+                        "name": "Status-Project",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/projetos.ReqUpdateStatusProjeto"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/errorstratment.ResError"
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/errorstratment.ResError"
+                            }
                         }
                     }
                 }
@@ -164,6 +450,71 @@
         }
     },
     "definitions": {
+        "errorstratment.ResError": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "error": {
+                    "type": "string"
+                },
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "errorstratment.ResOk": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer",
+                    "example": 200
+                },
+                "message": {
+                    "type": "string",
+                    "example": "Project deleted successfully"
+                }
+            }
+        },
+        "projetos.ReqAtualizarProjetoData": {
+            "type": "object",
+            "properties": {
+                "descricao_projeto": {
+                    "type": "string",
+                    "example": "Criacao de sistema e-commerce"
+                },
+                "equipe_id": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "nome_projeto": {
+                    "type": "string",
+                    "example": "Casas Bahias"
+                }
+            }
+        },
+        "projetos.ReqProjeto": {
+            "type": "object",
+            "properties": {
+                "descricao_projeto": {
+                    "type": "string",
+                    "example": "Descricao"
+                },
+                "equipe_id": {
+                    "type": "integer",
+                    "example": 2
+                },
+                "nome_projeto": {
+                    "type": "string",
+                    "example": "Nome"
+                },
+                "prazo_entrega": {
+                    "type": "integer",
+                    "example": 2
+                }
+            }
+        },
         "projetos.ReqProjetos": {
             "type": "object",
             "properties": {
@@ -202,6 +553,38 @@
                 "status": {
                     "type": "string",
                     "example": "Concluido"
+                }
+            }
+        },
+        "projetos.ReqStatusProjeto": {
+            "type": "object",
+            "properties": {
+                "data_conclusao": {
+                    "type": "string",
+                    "example": ""
+                },
+                "data_criacao": {
+                    "type": "string",
+                    "example": "2022-07-25"
+                },
+                "descricao_projeto": {
+                    "type": "string"
+                },
+                "equipe_id": {
+                    "type": "integer"
+                },
+                "id_projeto": {
+                    "type": "integer"
+                },
+                "nome_projeto": {
+                    "type": "string"
+                },
+                "prazo_entrega": {
+                    "type": "string",
+                    "example": "2022-07-25"
+                },
+                "status": {
+                    "type": "string"
                 }
             }
         },
@@ -246,6 +629,15 @@
                 },
                 "status": {
                     "type": "string"
+                }
+            }
+        },
+        "projetos.ReqUpdateStatusProjeto": {
+            "type": "object",
+            "properties": {
+                "status": {
+                    "type": "string",
+                    "example": "Em Andamento"
                 }
             }
         }
